# gitlab-report

./: README.md  pyproject.toml
gitlab_report/: cli.py  config.py  export.py  filter.py  gitlab.py  normalize.py  report.py
gitlab_report/blocks/: __init__.py  column.py  group.py  section.py
gitlab_report/components/: __init__.py  column.py  group.py  report.py  section.py
gitlab_report/database/: __init__.py  database.py
gitlab_report/database/collections/: __init__.py  issues.py
gitlab_report/database/models/: __init__.py  group.py  issue.py  project.py  user.py
gitlab_report/export/: __init__.py  html.py  json.py  markdown.py  pdf.py
gitlab_report/models/: __init__.py  group.py  issue.py  project.py
gitlab_report/reports/: __init__.py  html.py  json.py  markdown.py  pdf.py
